--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
   <footer>
     <p>&copy; 2025 Blagovest Todorov</p>
     <div class="social-icons">
-      <a href="#"><i class="fa-brands fa-github"></i></a>
-      <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="#"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://github.com/BlagovestT" target="_blank"><i class="fa-brands fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/blagovest-todorov-13349122b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
     </div>
   </footer>
 </body>
